--- a/JavaScript/Programs/AreaOfaSquare.html
+++ b/JavaScript/Programs/AreaOfaSquare.html
@@ -10,7 +10,7 @@
         function area()
         {
             
-            let a=10;   
+            let a=parseInt(prompt("enter side"));  
             let area=a*a;
             
             document.write("area is: "+area);
