--- a/JavaScript/Programs/AreaofRectangle.html
+++ b/JavaScript/Programs/AreaofRectangle.html
@@ -9,8 +9,8 @@
     <script>
         function Rect()
         {
-            let width=10;
-            let length=20;
+             let width=parseInt(prompt("enter width"));  
+            let length=parseInt(prompt("enter length"));
             let area=length*width;
             document.write("area :" +area);
         }
