--- a/JavaScript/Programs/Swap2.html
+++ b/JavaScript/Programs/Swap2.html
@@ -10,7 +10,8 @@
         function Swap2() {
             // let a=prompt("enter first number");
             // let b=prompt("enter second number");
-            let a=20,b=10;
+            let a=parseInt(prompt("enter side"));
+            let b=parseInt(prompt("enter side"));
             document.write("before swapping"+" a="+"  "+a +" b="+"  "+b);
             document.write("<br></br>");
             a=a+b;
