--- a/JavaScript/Programs/Odd.html
+++ b/JavaScript/Programs/Odd.html
@@ -9,7 +9,7 @@
     <script>
         function Odd()
         {
-            let a=10;
+            let a=parseInt(prompt("enter number"));
             if(a%2==0){
                 document.write("even number");
             }
