--- a/JavaScript/Programs/Prime.html
+++ b/JavaScript/Programs/Prime.html
@@ -9,30 +9,19 @@
     <script>
         function prime()
         {
-            let number=9;
-            let count=0
-            if (number <= 1) {
-    return false;
-  }
-  for (let i = 2; i <= number; i++) {
-    if (number % i === 0) {
-      count=count+1;
+          var n, i, flag = true;
+          n=parseInt(prompt("enter a number"));
+          for(i = 2; i <= n - 1; i++)
+                if (n % i == 0) {
+                    flag = false;
+                    break;
+                }
+                if (flag == true)
+                document.write(n + " is prime");
+            else
+                document.write(n + " is not prime");
     }
-  }
-
-  return true;
-  if(count==1)
-  {
-    document.write("prime")
-  }
-  else
-  {
-    document.write("not prime");
-  }
-}
-
-        
-        prime();
+     prime();
     </script>
 </body>
 </html>
